docs: add update openings documentation
